--- a/landscapepage copy/MobileResponsive.html
+++ b/landscapepage copy/MobileResponsive.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- Title used by search engines for ranking and by browsers to keep track of tabs -->
-	<title>Landscape Page</title>
+	<title>Pantalla de Login</title>
 	<!-- links the html and css file together. Without this, the CSS won't be applied to the webpage. -->
 	<link rel="stylesheet" href="MobileResponsive.css">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
@@ -19,13 +19,14 @@
 <body>
 
 	<div class="muaImagen">
+	<!--<img src="original.jpg"-->
 		<div class="loginBox">
 			<h1>Una mujer a la vez...</h1>
 				<h2>Mujeres Unidas y Activas</h2>
-  					<input type="text" name="Correo eléctronico" id="correoEléctronico" placeholder="@mujeresunidas.net" style="height:50px; width:200px"><br>
-  					<input type="password" name="Contraseña" id="contraseña" placeholder="contraseña" style="height:50px; width:200px"><br>
+  					<input type="text" name="Correo eléctronico" id="correoEléctronico" placeholder="&#128231; @mujeresunidas.net" style="height:50px; width:200px"><br>
+  					<input type="password" name="Contraseña" id="contraseña" placeholder="&#128272; contraseña" style="height:50px; width:200px"><br>
   				
-  					<button class="iniciar"><span><a href="Apoyo.html" target="_self">Iniciar</a></span></button>
+  					<button class="iniciar"><span><a href="Actividades.html" target="_self">Iniciar</a></span></button>
   		</div>
  	</div>
 
