prueba de acceso

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Local Storage Example</title>
+	<title>Local Storage Ejemplo</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
