--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Local Storage Ejemplo</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+  <head>
+  <title>Local Storage Ejemplo</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<form>
-	<label for="name">Name:</label>
-	<input id="firstNameInp" type="text" name="name">
-	<div  onclick="addPerson()">Hello!</div>
+  <form>
+    <label for="name">Name:</label>
+    <input id="firstNameInp" type="text" name="name" id="name">
+    <div onclick="addPerson()">Hello!</div>
 </form>
 <script type="text/javascript" src="index.js"></script>
 </html>
